Fix spacing of article tags
close #8

--- a/source/css/article.scss
+++ b/source/css/article.scss
@@ -241,6 +241,7 @@
   display: inline-block;
   padding: 0 0.5rem;
   margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
   @include transition(background-color 0.3s ease);
   &:hover {
     background-color: $lighted-sky;
